--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/lumen-framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "league/flysystem": "^1.0",
         "league/oauth2-server": "^7.2",
         "symfony/var-dumper": "^4.1",
         "symfony/yaml": "^4.1",
