--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.1.3",
         "defuse/php-encryption": "^2.2",
         "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.4",
         "laravel/lumen-framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "league/flysystem": "^1.0",
