Basic GitHub Actions test runner for Lumen

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "scripts": {
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ]
+        ],
+        "test": "vendor/bin/phpunit"
     },
     "config": {
         "preferred-install": "dist",
