--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         "defuse/php-encryption": "^2.2",
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.4",
-        "laravel/lumen-framework": "5.7.*",
+        "laravel/lumen-framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "league/flysystem": "^1.0",
         "league/oauth2-server": "^7.2",
         "symfony/var-dumper": "^4.1",
         "symfony/yaml": "^4.1",
-        "vlucas/phpdotenv": "~2.2",
+        "vlucas/phpdotenv": "^3.3",
         "webmozart/assert": "^1.3"
     },
     "require-dev": {
