Started adding in new ping notify feature

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ BASE_UPLOAD_URL=
 BASE_CONTENT_ENTRY_PATH=
 # Command to build your static site, e.g. "sh /path/to/build.sh"
 SITE_BUILD_COMMAND=
+# URL to notify about a new post.
+POST_CREATED_PING_URL=
