--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,22 @@
 {
     "name": "yesdevnull/micropub-endpoint",
-    "description": "A Micropub API endpoint.",
-    "keywords": ["php", "lumen-php-framework", "micropub", "indieauth", "api"],
-    "license": "MIT",
     "type": "project",
+    "description": "A Micropub API endpoint.",
+    "keywords": [
+        "php",
+        "lumen-php-framework",
+        "micropub",
+        "indieauth",
+        "api"
+    ],
+    "license": "MIT",
     "require": {
-        "php": ">=7.1.3",
+        "php": "^7.2",
+        "ext-json": "*",
         "defuse/php-encryption": "^2.2",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "^6.0",
         "intervention/image": "^2.4",
-        "laravel/lumen-framework": "5.8.*",
+        "laravel/lumen-framework": "^6.0",
         "laravel/tinker": "^1.0",
         "league/flysystem": "^1.0",
         "league/oauth2-server": "^7.2",
@@ -19,9 +26,16 @@
         "webmozart/assert": "^1.3"
     },
     "require-dev": {
+        "ergebnis/composer-normalize": "^2.3",
         "fzaninotto/faker": "~1.4",
+        "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~7.0",
-        "mockery/mockery": "~1.0"
+        "roave/security-advisories": "dev-master"
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
@@ -33,17 +47,12 @@
             "tests/"
         ]
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "scripts": {
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "test": "vendor/bin/phpunit"
-    },
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
