--- a/composer.json
+++ b/composer.json
@@ -11,25 +11,23 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.2.5",
         "ext-json": "*",
         "defuse/php-encryption": "^2.2",
         "guzzlehttp/guzzle": "^6.0",
         "intervention/image": "^2.4",
-        "laravel/lumen-framework": "^6.0",
-        "laravel/tinker": "^1.0",
-        "league/flysystem": "^1.0",
+        "laravel/lumen-framework": "^7.0",
+        "laravel/tinker": "^2.0",
+        "league/flysystem": "^1.0.8",
         "league/oauth2-server": "^7.2",
-        "symfony/var-dumper": "^4.1",
-        "symfony/yaml": "^4.1",
-        "vlucas/phpdotenv": "^3.3",
+        "symfony/yaml": "^5.0",
         "webmozart/assert": "^1.3"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.3",
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~7.0",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "phpunit/phpunit": "^8.4 || ^9.0",
         "roave/security-advisories": "dev-master"
     },
     "config": {
